welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: not found: value asmile
if ((asmile==true && bsmile==true) || (asmile==false && bsmile==false)){
     ^