welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {

if ((asmile==true && bsmile==true) || (asmile==false && bsmile==false)){

return true
              		}else{
              				return false
              		}
	
}
